--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <html lang="en">
 <head>
 <title>BibiAbbas</title>
-<link rel="icon" href="images/" type="image/gif" sizes="16x16">
+<link rel="icon" href="images/bibiabout.jpg" type="image/gif" sizes="16x16">
 	
 	<!-- Meta tag Keywords -->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -234,6 +234,73 @@
 	</div>
 </section>
 <!-- //experience -->
+<!-- gallery -->
+<div class="gallery py-5" id="projects">
+	<div class="container py-3">
+	<h3 class="heading">Projects</h3>
+	<div class="row gallery_grid-more project-grids w3ls">
+	   <div class="col-md-3 p-0 pr-2 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
+		  <div class="w3_agile_gallery_effect">
+			 <a href="images/g1.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+				<figure>
+				   <img src="images/g1.jpg" alt=" " class="img-responsive" />
+				</figure>
+			 </a>
+		  </div>
+	   </div>
+	   <div class="col-md-3 p-0 pr-2 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
+		  <div class="w3_agile_gallery_effect">
+			 <a href="images/g2.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+				<figure>
+				   <img src="images/g2.jpg" alt=" " class="img-responsive" />
+				</figure>
+			 </a>
+		  </div>
+		  <div class="clearfix"> </div>
+	   </div>
+	   <div class="col-md-6 p-0 col-sm-6 col-12 pt-sm-0 pt-2 agileits_w3layouts_gallery_grid1 hover14 column">
+		  <div class="w3_agile_gallery_effect">
+			 <a href="images/g3.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+				<figure>
+				   <img src="images/g3.jpg" alt=" " class="img-responsive" />
+				</figure>
+			 </a>
+		  </div>
+	   </div>
+	</div>
+	<div class="row gallery_grid-more">
+	   <div class="col-md-6 p-0 col-sm-6 col-12 pt-sm-0 pt-2 agileits_w3layouts_gallery_grid1 w3layouts_gallery_grid1 hover14 column">
+		  <div class="w3_agile_gallery_effect">
+			 <a href="images/g4.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+				<figure>
+				   <img src="images/g4.jpg" alt=" " class="img-responsive" />
+				</figure>
+			 </a>
+		  </div>
+	   </div>
+	   <div class="col-md-3 pt-2 pl-2 p-0 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
+		  <div class="w3_agile_gallery_effect">
+			 <a href="images/g5.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+				<figure>
+				   <img src="images/g5.jpg" alt=" " class="img-responsive" />
+				</figure>
+			 </a>
+		  </div>
+	   </div>
+	   <div class="col-md-3 pt-2 pl-2 p-0 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
+		  <div class="w3_agile_gallery_effect">
+			 <a href="images/g6.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+				<figure>
+				   <img src="images/g6.jpg" alt=" " class="img-responsive" />
+				</figure>
+			 </a>
+		  </div>
+	   </div>
+	   <div class="clearfix"> </div>
+	</div>
+ </div>
+</div>
+<!-- //gallery --> 
 
 
 
