images tittle added, 3 images added, styles changed

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					
 				</div>
 				<div class="col-md-5 col-12 col-6 image_margin">
-					<img src="images/bibitransper.png" alt="" class="img-fluid" />
+					<img src="images/bibitransper.png" alt="" class="pht" class="img-fluid" />
 				</div>
 			</div>
 		</div>
@@ -177,7 +177,7 @@
 			
 			<div class="col-lg-4 col-md-6 agile mt-sm-5 mt-4 w3-icon-grid1">
 				<h3><i class="fas mr-2 fa-chart-pie" aria-hidden="true"></i>Interior Designer</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisci ngelit. In euismod faucibus quam. placerat placerat dolor. Vestibulum</p>
+				<p> Customised design for floor medallion work.</p>
 			</div>
 			
 			
@@ -237,22 +237,22 @@
 <!-- gallery -->
 <div class="gallery py-5" id="projects">
 	<div class="container py-3">
-	<h3 class="heading">Projects</h3>
+	<h3 class="heading1">Projects</h3>
 	<div class="row gallery_grid-more project-grids w3ls">
 	   <div class="col-md-3 p-0 pr-2 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
 		  <div class="w3_agile_gallery_effect">
-			 <a href="images/g1.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+			 <a href="images/proj1.jpg" data-lightbox="example-set" data-title="Personal responsive website .">
 				<figure>
-				   <img src="images/g1.jpg" alt=" " class="img-responsive" />
+				   <img src="images/proj1.jpg" alt=" " class="img-responsive" />
 				</figure>
 			 </a>
 		  </div>
 	   </div>
 	   <div class="col-md-3 p-0 pr-2 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
 		  <div class="w3_agile_gallery_effect">
-			 <a href="images/g2.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+			 <a href="images/proj2.png" data-lightbox="example-set" data-title="Calculator HTML project .">
 				<figure>
-				   <img src="images/g2.jpg" alt=" " class="img-responsive" />
+				   <img src="images/proj2.png" alt=" " class="img-responsive" />
 				</figure>
 			 </a>
 		  </div>
@@ -260,9 +260,9 @@
 	   </div>
 	   <div class="col-md-6 p-0 col-sm-6 col-12 pt-sm-0 pt-2 agileits_w3layouts_gallery_grid1 hover14 column">
 		  <div class="w3_agile_gallery_effect">
-			 <a href="images/g3.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+			 <a href="images/projlaptp.jpg" data-lightbox="example-set" data-title=" Laptop repairing and maintenance .">
 				<figure>
-				   <img src="images/g3.jpg" alt=" " class="img-responsive" />
+				   <img src="images/projlaptp.jpg" alt=" " class="img-responsive" />
 				</figure>
 			 </a>
 		  </div>
@@ -271,31 +271,58 @@
 	<div class="row gallery_grid-more">
 	   <div class="col-md-6 p-0 col-sm-6 col-12 pt-sm-0 pt-2 agileits_w3layouts_gallery_grid1 w3layouts_gallery_grid1 hover14 column">
 		  <div class="w3_agile_gallery_effect">
-			 <a href="images/g4.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+			 <a href="images/projitalian1.jpg" data-lightbox="example-set" data-title="Italian marble floor design .">
 				<figure>
-				   <img src="images/g4.jpg" alt=" " class="img-responsive" />
+				   <img src="images/projitalian1.jpg" alt=" " class="img-responsive" />
 				</figure>
 			 </a>
 		  </div>
 	   </div>
 	   <div class="col-md-3 pt-2 pl-2 p-0 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
 		  <div class="w3_agile_gallery_effect">
-			 <a href="images/g5.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+			 <a href="images/projcorintile.jpg" data-lightbox="example-set" data-title="Corian tiles inlay work for wall design .">
 				<figure>
-				   <img src="images/g5.jpg" alt=" " class="img-responsive" />
+				   <img src="images/projcorintile.jpg" alt=" " class="img-responsive" />
 				</figure>
 			 </a>
 		  </div>
 	   </div>
 	   <div class="col-md-3 pt-2 pl-2 p-0 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
 		  <div class="w3_agile_gallery_effect">
-			 <a href="images/g6.jpg" data-lightbox="example-set" data-title="Lorem Ipsum is simply dummy the when an unknown galley of type and scrambled it to make a type specimen.">
+			 <a href="images/projmetalart.jpg" data-lightbox="example-set" data-title=" Metal tree design for wall art .">
 				<figure>
-				   <img src="images/g6.jpg" alt=" " class="img-responsive" />
+				   <img src="images/projmetalart.jpg" alt=" " class="img-responsive" />
 				</figure>
 			 </a>
 		  </div>
 	   </div>
+	   <div class="col-md-6 p-0 col-sm-6 col-12 pt-sm-0 pt-2 agileits_w3layouts_gallery_grid1 w3layouts_gallery_grid1 hover14 column">
+		<div class="w3_agile_gallery_effect">
+		   <a href="images/projalumn.jpg" data-lightbox="example-set" data-title="Aluminium design for wall art.">
+			  <figure>
+				 <img src="images/projalumn.jpg" alt=" " class="img-responsive" />
+			  </figure>
+		   </a>
+		</div>
+	 </div>
+	 <div class="col-md-3 pt-2 pl-2 p-0 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
+		<div class="w3_agile_gallery_effect">
+		   <a href="images/projbrass.jpg" data-lightbox="example-set" data-title="Brass arabic design for wall art.">
+			  <figure>
+				 <img src="images/projbrass.jpg" alt=" " class="img-responsive" />
+			  </figure>
+		   </a>
+		</div>
+	 </div>
+	 <div class="col-md-3 pt-2 pl-2 p-0 col-sm-3 col-6 agileits_w3layouts_gallery_grid1 hover14 column">
+		<div class="w3_agile_gallery_effect">
+		   <a href="images/projnmegrantjpg" data-lightbox="example-set" data-title="Granite name board .">
+			  <figure>
+				 <img src="images/projnmegrantjpg" alt=" " class="img-responsive" />
+			  </figure>
+		   </a>
+		</div>
+	 </div>
 	   <div class="clearfix"> </div>
 	</div>
  </div>
