--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
 					<li class="nav-item mr-lg-4">
 						<a class="nav-link scroll" href="#experience">Experience</a>
 					</li>
+					<li class="nav-item mr-lg-4">
+						<a class="nav-link scroll" href="#projects">Projects</a>
+					</li>
 					
 					<li class="nav-item">
 						<a class="nav-link scroll" href="#contact">Contact</a>
