about images changed and index file about code edit

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				
 			</div>
 			<div class="col-lg-4 col-md-6 my-lg-0 my-5">
-				<img src="images/bibiabout.jpg" alt="" style="margin-left: -1px;margin-top: 8px;" />
+				<img src="images/about3new.png" alt="" style="margin-left: -234px;margin-top: -87px; width: 650px;height: 500px;" />
 			</div>
 			<div class="col-lg-4 bar-grids">
 				<div class="wthree_skills">
@@ -230,7 +230,7 @@
 				
 			</div>
 			<div class="col-md-9 mt-md-0 mt-4 wthree">
-				<p>Luxury italian marble floor medallion desgin work with the creativity of our cutting edge technology of CNC Waterjet Machine. <a href="//www.stonemax.in/">Visit www.stonemax.in</a></p>
+				<p>Italian marble floor medallion desgin work with the creativity of our cutting technology CNC Waterjet Machine. <a href="//www.stonemax.in/">Visit www.stonemax.in</a></p>
 			</div>
 		</div>
 		
