Experience content edited

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 		</div>
 		<div class="row exp-grids mt-5 wthree">
 			<div class="col-md-3 exp">
-				<h4>Interior Design</h4>
+				<h4>Interior Designer</h4>
 				
 			</div>
 			<div class="col-md-9 mt-md-0 mt-4 wthree">
