--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 			<div class="row agile_banner_info">
 				<div class="col-md-7 agile_banner_margin">
 					<h5>Hi</h5>
-					<h2>My name is <span style="color:khaki;font-size: 48px;" >Bibi Abbas</span> </h2>
+					<h2>I am....  <span style="color:khaki;font-size: 48px;" >Bibi Abbas</span> </h2>
 					<h4>System Support Engineer/Web Designer/Interior Designer</h4>
 					<p>I would like to use my technical qualifications, computer skills to quickly learn and apply new concepts in information technology in order to analyze and secure environments, improve processes, increase effectiveness and provide business solutions.</p>
 					
@@ -119,7 +119,7 @@
 		<div class="row about-grids">
 			<div class="col-lg-4">
 				
-				<p>Hi...This is <span style="color: blueviolet;font-size: 24px;">Bibi</span> ....I am worked in as a Manager at stonemax  waterjet CNC design works. New technology concept that hike into the cutting tool of pure water and it compiled into creating new designs and that we called floor medallion design in Italian Marbles.</p>	  
+				<p>Hi...This is <span style="color: blueviolet;font-size: 24px;">Bibi</span> ....I am worked as a Manager at stonemax  waterjet CNC design works. New era of technology concept that hike into the cutting tool of pure water and it compiled into creating new designs and that we called floor medallion design in Italian Marbles.</p>	  
 
 				<p>My previous track of profile is a system support engineer and i had the experience in hardware and networking. 
 					Learning new things is my passion and it comes to the end of Coding. This is the first project of my personal website after the web designing challenge. More things are there to learn for a full stack developer. So i happy to go with coding. </p>
@@ -140,9 +140,9 @@
 						<div class="progress-bar progress-bar-striped active" style="width: 80%">
 						</div>
 					</div>
-					<h6>Web Designing<span>50% </span></h6>
+					<h6>Web Designing<span>75% </span></h6>
 					<div class="progress">
-						<div class="progress-bar progress-bar-striped active" style="width: 50%">
+						<div class="progress-bar progress-bar-striped active" style="width: 75%">
 						</div>
 					</div>
 					<h6>Interior Design<span> 90% </span></h6>
