--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<!-- logo -->
 			<h1>
 				<a class="navbar-brand" href="index.html">
-					
+					<img src="images/logobibi.png" alt="" height="41px" width="41px">
 				</a>
 			</h1>
 			<!-- //logo -->
@@ -98,7 +98,7 @@
 			<div class="row agile_banner_info">
 				<div class="col-md-7 agile_banner_margin">
 					<h5>Hi</h5>
-					<h2>I am....  <span style="color:khaki;font-size: 48px;" >Bibi Abbas</span> </h2>
+					<h2>I am....  <span style="color:rgb(255, 206, 47);font-size: 48px;" >Bibi Abbas</span> </h2>
 					<h4>System Support Engineer/Web Designer/Interior Designer</h4>
 					<p>I would like to use my technical qualifications, computer skills to quickly learn and apply new concepts in information technology in order to analyze and secure environments, improve processes, increase effectiveness and provide business solutions.</p>
 					
@@ -130,12 +130,12 @@
 			</div>
 			<div class="col-lg-4 bar-grids">
 				<div class="wthree_skills">
-					<h6>Desktop Support<span> 90% </span></h6>
+					<h6>Desktop & Laptop Support<span> 90% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 90%">
 						</div>
 					</div>
-					<h6>Technical Support<span> 80% </span></h6>
+					<h6>Technical & Networking<span> 80% </span></h6>
 					<div class="progress">
 						<div class="progress-bar progress-bar-striped active" style="width: 80%">
 						</div>
