About content edited

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 		<div class="row about-grids">
 			<div class="col-lg-4">
 				
-				<p>Hi...This is <span style="color: blueviolet;font-size: 24px;">Bibi</span> ....I am worked as a Manager at stonemax  waterjet CNC design works. New era of technology concept that hike into the cutting tool of pure water and it compiled into creating new designs and that we called floor medallion design in Italian Marbles.</p>	  
+				<p>Hi...This is <span style="color: blueviolet;font-size: 24px;">Bibi</span> ....I am working as a Manager at stonemax  (Waterjet CNC design). New era of technology concept that hike into the cutting tool of pure water and it compiled into raising new designs in interior and that we called floor medallion design in Italian Marbles.</p>	  
 
 				<p>My previous track of profile is a system support engineer and i had the experience in hardware and networking. 
 					Learning new things is my passion and it comes to the end of Coding. This is the first project of my personal website after the web designing challenge. More things are there to learn for a full stack developer. So i happy to go with coding. </p>
